--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ rvm:
   - 2.2.3
 before_script:
   - cp config/database.yml.sample config/database.yml
-  - psql -c 'create database auction_house_test;' -U postgres
+  - psql -c 'create database auction_house_test' -U postgres
 addons:
   postgresql: '9.3'
